--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@ ul.others {
   <p>
     Kevin Shang is the Joseph J. Ruvane, Jr. Distinguished Professor of Operations Management at the Fuqua School of Business, Duke University. He received his MBA from the University of California, Riverside in 1998 
     and his Ph.D. from the University of California, Irvine in 2002. Professor Shang specializes in supply chain management and inventory control, with a research focus on developing simple yet effective inventory policies 
-    for supply chain systems. His work also explores the intersection of operations and finance, as well as renewable energy systems. His research has been published in top management journals, including Management Science, 
-    Manufacturing & Service Operations Management, and Operations Research. Several of his papers have received prestigious research awards from professional societies. Additionally, he has served on the editorial boards of 
+    for supply chain systems. His work also explores the intersection of operations and finance, as well as renewable energy systems. His research has been published in top management journals, including <i>Management Science</i>, 
+    <i>Manufacturing & Service Operations Management</i>, and <i>Operations Research</i>. Several of his papers have received prestigious research awards from professional societies. Additionally, he has served on the editorial boards of 
     multiple leading academic journals. Professor Shang has received Fuqua's teaching awards for the Daytime MBA, Master of Management Studies, and Master of Quantitative Management programs.   
   </p>
      
