--- a/index.html
+++ b/index.html
@@ -205,6 +205,17 @@ ul.others {
 <div id="teaching" class="section">
   <h2>Teaching</h2>
 
+ 
+  <!-- Courses Section -->
+<h3>Ph.D. Courses</h3>
+<ul class="teaching">
+  <li>
+    <a href="https://kevinshangduke.github.io/InventoryTheorySyllabus.html">
+      BA982 Inventory Theory
+    </a>
+  </li>
+</ul>
+  
   <!-- Simulation Games Section -->
   <h3>Simulation Games</h3>
   <ul class="teaching">
