--- a/InventoryTheorySyllabus.html
+++ b/InventoryTheorySyllabus.html
@@ -7523,21 +7523,7 @@ a.anchor-link {
 <strong>Class Time:</strong> Friday, 1-4 PM<br/>
 <strong>Location:</strong> McKinley Seminar Room
 </div>
-<hr/>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=ecac9b12-01e1-4a8c-b32f-12e36fd2d521">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<ul>
-<li><a href="https://kevinshangduke.github.io/">Kevin Shang's Github Page</a></li>
-<li><a href="https://www.fuqua.duke.edu/faculty/kevin-shang">Kevin Shang's Fuqua Page</a></li>
-</ul>
+<p><a href="https://kevinshangduke.github.io/">Github Page</a>      <a href="https://www.fuqua.duke.edu/faculty/kevin-shang">Fuqua Page</a></p>
 <hr/>
 </div>
 </div>
@@ -7566,7 +7552,7 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="Course-Policies"><a id="CoursePolicy"></a>Course Policies<a class="anchor-link" href="#Course-Policies">¶</a></h2><ul>
-<li>I will update this page regularly. Please check back for new updates.</li>
+<li><strong>I will update this page regularly. Please check back for new updates.</strong></li>
 <li>This is a lecture-based course, although students are expected to lead the discussion of papers.</li>
 <li>Your final grade is determined based on the following items:<ul>
 <li>Class participation and discussion (15%)</li>
@@ -7919,25 +7905,7 @@ Research 59(4) 929-941.</li>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<ul>
-<li><a href="https://kevinshangduke.github.io/">Kevin Shang's Github Page</a></li>
-<li><a href="https://www.fuqua.duke.edu/faculty/kevin-shang">Kevin Shang's Fuqua Page</a></li>
-</ul>
-<hr/>
-</div>
-</div>
-</div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=29ad5786-7370-4d50-a30b-4a1fb772fa6a">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-<div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span> 
-</pre></div>
-</div>
+<p><a href="https://kevinshangduke.github.io/">Github Page</a>      <a href="https://www.fuqua.duke.edu/faculty/kevin-shang">Fuqua Page</a></p>
 </div>
 </div>
 </div>
