--- a/InventoryTheorySyllabus.html
+++ b/InventoryTheorySyllabus.html
@@ -7890,8 +7890,9 @@ Research 59(4) 929-941.</li>
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="-Open-Research-Questions"><a id="OpenQs"></a> Open Research Questions<a class="anchor-link" href="#-Open-Research-Questions">¶</a></h2><ul>
 <li>Based on Shang and Song (2003) and Levi. et al. (2007), is it possible to develop $\alpha$-optimal echelon base-stock policies?</li>
-<li>Based on Gaur and Seshadri (2005) and Luo and Shang (2019), one can conclude a 2 by 2 table where the horizontal axis represents whether financial markets are perfect and the vertical axis represents the risk attitudes (i.e., either risk neutral or risk averse). A standard newsvendor model is dervied from the assumption that the financial market is perfect and the firm is risk neutral. Luo and Shang (2019) studies a risk-neural firm facing imperfect financial markets. Gaur and Seshadri (2005) studies a risk-averse firm facing perfect financial markets. It would be interesting to explore the fourth quadrant.</li>
+<li>Based on Gaur and Seshadri (2005) and Luo and Shang (2019), one can conclude a 2 by 2 table where the horizontal axis represents whether financial markets are perfect and the vertical axis represents the risk attitudes (i.e., either risk neutral or risk averse). A standard newsvendor model is dervied from the assumption that the financial market is perfect and the firm is risk neutral. Luo and Shang (2019) study a risk-neural firm facing imperfect financial markets. Gaur and Seshadri (2005) study a risk-averse firm facing perfect financial markets. It would be interesting to explore the fourth quadrant.</li>
 <li>Using Q-learning or other learning algorithms to study a lost-sales inventory model with lead times. Can you derive analytical bounds for your learning algorithm and compare the resulting policy with existing heuristics?</li>
+<li>You are encouraged to explore topics related to transfer learning and multi-agent learning.</li>
 </ul>
 <p><a href="#Class-Schedule">Back to schedule</a></p>
 <hr/>
