--- a/InventoryTheorySyllabus.html
+++ b/InventoryTheorySyllabus.html
@@ -7656,13 +7656,13 @@ a.anchor-link {
 <li>Finite-horizon model</li>
 <li>Infinite-horizon model: Base-stock policy</li>
 <li>Myopic policies</li>
+<li>Lost sales model: Known demand distribution</li>
 </ul>
 <p><strong>Readings:</strong></p>
 <ul>
 <li>Section 2 of Clark, A. and H. Scarf. 1960. Optimal policies for a multi-echelon inventory problem. Management Science 6 475-490.</li>
 <li>[Zipkin] 9.1-9.6</li>
-<li>Iglehart, D., S. Karlin. 1962. Optimal policy for dynamic inventory process with nonstationary stochastic demands. Chapter 8 in K. Arrow, S. Karlin, H. Scarf (eds.), Studies in Applied Probabilty and Management Science, Stanford, CA.</li>
-<li>Huh, W.T., G. Janakiraman, J. Muckstadt, P. Rusmevichientong. 2009. Asymptotic optimality of order-up-to policies in lost sales inventory systems. Management Science 55(3) 404-420.</li>
+<li>Iglehart, D., S. Karlin. 1962. Optimal policy for dynamic inventory process with nonstationary stochastic demands. Chapter 8 in K. Arrow, S. Karlin, H. Scarf (eds.), Studies in Applied Probability and Management Science, Stanford, CA.</li>
 </ul>
 <p><a href="#Class-Schedule">Back to schedule</a></p>
 <hr/>
@@ -7826,10 +7826,17 @@ a.anchor-link {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h3 id="Class-10:-Data-Driven-Inventory-Models:-Online-Learning"><a id="Class-10"></a>Class 10: Data-Driven Inventory Models: Online Learning<a class="anchor-link" href="#Class-10:-Data-Driven-Inventory-Models:-Online-Learning">¶</a></h3><ul>
 <li>Single-stage systems</li>
+<li>Lost sales model with censored demand<ul>
+<li>Parametric learning: Bayesian approach</li>
+<li>Nonparametric learning: Adaptive SGD-based algorithms</li>
+</ul>
+</li>
 </ul>
 <p><strong>Readings:</strong></p>
 <ul>
+<li>Azoury, K. S. 1985. Bayes solution to dynamic inventory models under unknown demand distribution. Management Science 31(9) 1150-1160.</li>
 <li>Huh, W. T., P. Rusmevichientong. 2009. A nonparametric asymptotic analysis of inventory planning with censored demand. Mathematics of Operations Research 34(1) 103-123.</li>
+<li>Huh, W.T., G. Janakiraman, J. Muckstadt, P. Rusmevichientong. 2009. Asymptotic optimality of order-up-to policies in lost sales inventory systems. Management Science 55(3) 404-420.</li>
 <li>Ding, J., Rong, Y, Huh, W.T. 2024. Feature-based inventory control with censored demand. Manufacturing &amp; Service Operations Management 26(3) 1157-1172.</li>
 <li>Yang, C, Huh, W.T. 2024. A non-parametric learning algorithm for a stochastic multi-echelon inventory problem. Production and Operations Management 33(3) 701-720.</li>
 <li>Huh, W.T., Janakiraman, G., Muckstadt, J., Rusmevichientong, P. 2009. An adaptive algorithm for finding the optimal base-stock policy in lost sales inventory systems with censored demand. Mathematics of Operations Research 34(2) 397-416.</li>
