--- a/InventoryTheorySyllabus.html
+++ b/InventoryTheorySyllabus.html
@@ -7545,40 +7545,6 @@ a.anchor-link {
 </div>
 </div>
 </div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=5eef4bc5-2122-41de-a15e-c56597cfc787">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Course-Policies"><a id="CoursePolicy"></a>Course Policies<a class="anchor-link" href="#Course-Policies">¶</a></h2><ul>
-<li><strong>I will update this page regularly. Please check back for new updates.</strong></li>
-<li>This is a lecture-based course, although students are expected to lead the discussion of papers.</li>
-<li>Your final grade is determined based on the following items:<ul>
-<li>Class participation and discussion (15%)</li>
-<li>Paper presentation (15%)</li>
-<li>Three take-home assignments (30%)</li>
-<li>Final project and presentation (40%)</li>
-</ul>
-</li>
-<li>Class participation and discussion: Students are expected to come to every class session and prepare to discuss the topics and papers.</li>
-<li>Paper presentation: Each student needs to lead the discussion of a chosen paper. I will provide more information in the first class.</li>
-<li>Final project: Each student needs to submit a write-up on the topic related to inventory theory and applications. I shall provide several <a href="#OpenQs">open questions</a> for you to consider. However, you are welcome to propose your research question. The final presentation and paper should include 1) the research question and its motivation, 2) related literature, 3) a model and preliminary analysis and results, and 4) a plan for future work.</li>
-<li>Final project presentation: Your presentation should answer the following questions:<ol>
-<li>Problem definition: What is the research question?</li>
-<li>Relevance: Why is the research question important to practice?</li>
-<li>Model and methodology: What are the model setup and the research method? Go over the proof of one main result.</li>
-<li>Results: What are the main findings and insights?</li>
-<li>Managerial Implications: How can decision-makers benefit from the study?</li>
-</ol>
-</li>
-<li>You are welcome to use AI tools to inspire ideas, assist you in understanding materials, and help you answer assignment questions. However, you should challenge AI responses to ensure their correctness and accuracy.</li>
-</ul>
-<hr/>
-</div>
-</div>
-</div>
-</div>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=98daf23b-0ea0-4226-a5b8-efd433d42a86">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -7612,7 +7578,12 @@ a.anchor-link {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h3 id="Class-1:-Introduction"><a id="Class-1"></a>Class 1: Introduction<a class="anchor-link" href="#Class-1:-Introduction">¶</a></h3><ul>
 <li>A motivation example</li>
-<li>EOQ Model</li>
+<li>EOQ Model<ul>
+<li>With/w.o. backlogging</li>
+<li>Stationary demand rate</li>
+<li>Nonstationary demand rate</li>
+</ul>
+</li>
 <li>Newsvendor model</li>
 </ul>
 <p><strong>Readings:</strong></p>
