--- a/InventoryTheorySyllabus.html
+++ b/InventoryTheorySyllabus.html
@@ -7608,6 +7608,7 @@ a.anchor-link {
 </ul>
 <p><strong>Readings:</strong></p>
 <ul>
+<li>[Zipkin] 5.3.</li>
 <li>Roundy, R. 1985. 98%-effective integer-ratio lot sizing for one-warehouse multi-retailer systems. Management Science 31 1416–1430.</li>
 <li>Chen, F. 1998. Stationary policies in multiechelon inventory systems with deterministic demand and backlogging. Operations Research 46 S26-S34.</li>
 </ul>
