--- a/InventoryTheorySyllabus.html
+++ b/InventoryTheorySyllabus.html
@@ -7545,6 +7545,46 @@ a.anchor-link {
 </div>
 </div>
 </div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=905e79ba-530c-440a-85a5-8c06be070cbd">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h2 id="Grading-Policy">Grading Policy<a class="anchor-link" href="#Grading-Policy">¶</a></h2><ul>
+<li>Individual Assignments [50%]</li>
+<li>Attendance and Class Participation [10%]</li>
+<li>Paper Presentation [10%]</li>
+<li>Final Project and Presentation [40%]</li>
+</ul>
+<h3 id="Individual-Assignments">Individual Assignments<a class="anchor-link" href="#Individual-Assignments">¶</a></h3><ul>
+<li>From class 2 to class 7, I will assign problems as your homework for you to complete in a week. These problems are mainly extensions of the class lecture.</li>
+</ul>
+<h3 id="Paper-Presentation">Paper Presentation<a class="anchor-link" href="#Paper-Presentation">¶</a></h3><ul>
+<li>In each class from 8 to 11, one student will present a paper selected by me. The presentation should cover the paper in detail, including the main ideas, theorems, and the key steps in the proofs.</li>
+</ul>
+<h3 id="Final-Project-and-Presentation">Final Project and Presentation<a class="anchor-link" href="#Final-Project-and-Presentation">¶</a></h3><ul>
+<li>Each student is required to complete a research paper as the final project. The paper must include a clear motivation, a comprehensive literature review, and some preliminary analysis [30%]. Students are also required to present their work during the final class session [10%]. A list of potential open questions is provided at the end of the page.</li>
+</ul>
+<hr/>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=c5a0a918-19a7-4754-a4a4-1ead58771d08">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h2 id="AI-Policy">AI Policy<a class="anchor-link" href="#AI-Policy">¶</a></h2><ul>
+<li>Students are permitted to use AI to aid their understanding of the course content. They may also use AI tools to generate ideas and assist in analyzing homework assignments. However, students are expected to critically evaluate AI-generated responses and verify their accuracy. Additionally, students must disclose how they have used AI in their assignments and final projects.</li>
+</ul>
+<hr/>
+</div>
+</div>
+</div>
+</div>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=98daf23b-0ea0-4226-a5b8-efd433d42a86">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -7730,10 +7770,15 @@ a.anchor-link {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h3 id="Class-7:-Distrbution-Systems"><a id="Class-7"></a>Class 7: Distrbution Systems<a class="anchor-link" href="#Class-7:-Distrbution-Systems">¶</a></h3><ul>
 <li>Infinite-horizon model with base-stock policies</li>
+<li>Balance assumption and myopic allocation</li>
+<li>FCFS allocation</li>
+<li>Lower bounds and approximations</li>
+<li>Closed-form solution: Taylor approximation</li>
 </ul>
 <p><strong>Readings:</strong></p>
 <ul>
 <li>[Zipkin] 8.5-8.6</li>
+<li>Chen, F., Y.-S. Zheng. 1994. Lower bounds for multi-echelon stochastic inventory systems. Operations Research 40 1426-1443.</li>
 <li>Gallego, et al. 2007. Bounds, heuristics, and approximations for distribution systems. Operations Research 55 503-517.</li>
 <li>Shang, K., Z. Tao, S. Zhou. 2015. Optimizing reorder intervals for two-echelon distribution systems with stochastic demand. Operations Research 63(2) 458-475.</li>
 </ul>
@@ -7757,8 +7802,8 @@ a.anchor-link {
 <ul>
 <li>Modigliani, F., M. H. Miller. 1958. The cost of capital, corporate finance and the theory of investment. The American Economic Review 48(3) 261-297.</li>
 <li>Shang, K. 2019. Cash Beer Game. Foundations and Trends® in Technology, Information and Operations Management 12(2-3) 173-188.</li>
-<li>Gaur, V. and S. Seshadri. 2005. Hedging inventory risk through market instruments. Manufacturing and Service Operations Management 7(2) 103-120.</li>
-<li>Chen, X. M. Sim, D. Simchi-Levi, P. Sun. Risk aversion in inventory management. Operations Research 55(5) 828-842.</li>
+<li>Gaur, V., S. Seshadri. 2005. Hedging inventory risk through market instruments. Manufacturing and Service Operations Management 7(2) 103-120.</li>
+<li>Chen, X., M. Sim, D. Simchi-Levi, P. Sun. Risk aversion in inventory management. Operations Research 55(5) 828-842.</li>
 <li>Luo, W., K. Shang. 2019. Technical Note: Managing inventory for firms with trade credit and deficit penalty. Operations Research 67(2) 468-478.</li>
 <li>Luo, W., K. Shang. 2015. Joint inventory and cash management for multi-divisional supply chains. Operations Research 63(5) 1098-1116.</li>
 <li>Kouvelis, P., Li, R. 2020. Integrated risk management for newsvendors with VaR constraints. Manufacturing and Service Operations Management 21(4) 816-832.</li>
