--- a/InventoryTheorySyllabus.html
+++ b/InventoryTheorySyllabus.html
@@ -7558,7 +7558,7 @@ a.anchor-link {
 <li>Final Project and Presentation [40%]</li>
 </ul>
 <h3 id="Individual-Assignments">Individual Assignments<a class="anchor-link" href="#Individual-Assignments">¶</a></h3><ul>
-<li>From class 2 to class 7, I will assign problems as your homework for you to complete in a week. These problems are mainly extensions of the class lecture.</li>
+<li>From class 1 to class 7, I may assign problems as your homework for you to complete in a week. These problems are mainly extensions of the class lecture.</li>
 </ul>
 <h3 id="Paper-Presentation">Paper Presentation<a class="anchor-link" href="#Paper-Presentation">¶</a></h3><ul>
 <li>In each class from 8 to 11, one student will present a paper selected by me. The presentation should cover the paper in detail, including the main ideas, theorems, and the key steps in the proofs.</li>
@@ -7820,7 +7820,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Class-9:-Data-Driven-Inventory-Models:-Offline-(Supervised)-Learning"><a id="Class-9"></a>Class 9: Data-Driven Inventory Models: Offline (Supervised) Learning<a class="anchor-link" href="#Class-9:-Data-Driven-Inventory-Models:-Offline-(Supervised)-Learning">¶</a></h3><ul>
+<h3 id="Class-9:-Data-Driven-Inventory-Models:-Offline-Learning"><a id="Class-9"></a>Class 9: Data-Driven Inventory Models: Offline Learning<a class="anchor-link" href="#Class-9:-Data-Driven-Inventory-Models:-Offline-Learning">¶</a></h3><ul>
 <li>Single-stage systems</li>
 <li>Distribution systems</li>
 <li>Concentration inequalities and bounds</li>
