--- a/InventoryTheorySyllabus.html
+++ b/InventoryTheorySyllabus.html
@@ -7555,7 +7555,7 @@ a.anchor-link {
 <li>Individual Assignments [50%]</li>
 <li>Attendance and Class Participation [10%]</li>
 <li>Paper Presentation [10%]</li>
-<li>Final Project and Presentation [40%]</li>
+<li>Final Project and Presentation [30%]</li>
 </ul>
 <h3 id="Individual-Assignments">Individual Assignments<a class="anchor-link" href="#Individual-Assignments">¶</a></h3><ul>
 <li>From class 1 to class 7, I may assign problems as your homework for you to complete in a week. These problems are mainly extensions of the class lecture.</li>
@@ -7564,7 +7564,7 @@ a.anchor-link {
 <li>In each class from 8 to 11, one student will present a paper selected by me. The presentation should cover the paper in detail, including the main ideas, theorems, and the key steps in the proofs.</li>
 </ul>
 <h3 id="Final-Project-and-Presentation">Final Project and Presentation<a class="anchor-link" href="#Final-Project-and-Presentation">¶</a></h3><ul>
-<li>Each student is required to complete a research paper as the final project. The paper must include a clear motivation, a comprehensive literature review, and some preliminary analysis [30%]. Students are also required to present their work during the final class session [10%]. A list of potential open questions is provided at the end of the page.</li>
+<li>Each student is required to complete a research paper as the final project. The paper must include a clear motivation, a comprehensive literature review, and some preliminary analysis. Students are also required to present their work during the final class session. A list of potential open questions is provided at the end of the page.</li>
 </ul>
 <hr/>
 </div>
