--- a/InventoryTheorySyllabus.html
+++ b/InventoryTheorySyllabus.html
@@ -7601,9 +7601,9 @@ a.anchor-link {
 <li><strong><a href="#Class-7">Class 7 (10/17): Distribution Systems</a></strong></li>
 <li><strong><a href="#Class-8">Class 8 (10/24): Inventory Systems with Financial Flows</a></strong></li>
 <li><strong><a href="#Class-9">Class 9 (10/31): Data-Driven Inventory Models: Offline (Supervised) Learning</a></strong></li>
-<li><strong><a href="#Class-10">Class 10 (11/7): Data-Driven Inventory Models: Online Learning</a></strong></li>
-<li><strong><a href="#Class-11">Class 11 (11/14): Reinforcement Learning on Inventory Applications</a></strong></li>
-<li><strong><a href="#Class-12">Class 12 (11/21): Project Presentations</a></strong></li>
+<li><strong><a href="#Class-10">Class 10 (11/14): Data-Driven Inventory Models: Online Learning</a></strong></li>
+<li><strong><a href="#Class-11">Class 11 (11/21): Reinforcement Learning on Inventory Applications</a></strong></li>
+<li><strong><a href="#Class-12">Class 12 (12/5): Project Presentations</a></strong></li>
 </ul>
 <hr/>
 </div>
@@ -7827,6 +7827,7 @@ a.anchor-link {
 <li>Single-stage systems</li>
 <li>Distribution systems</li>
 <li>Concentration inequalities and bounds</li>
+<li>Student presentation</li>
 </ul>
 <p><strong>Readings:</strong></p>
 <ul>
@@ -7857,6 +7858,7 @@ a.anchor-link {
 <li>Nonparametric learning: Adaptive SGD-based algorithms</li>
 </ul>
 </li>
+<li>Student presentation</li>
 </ul>
 <p><strong>Readings:</strong></p>
 <ul>
@@ -7886,8 +7888,7 @@ Research 59(4) 929-941.</li>
 <li>Monte-Carlo evaluation and policy improvement</li>
 <li>Temporal difference learning</li>
 <li>Q-learning</li>
-<li>Actor-critic method</li>
-<li>Deep neural net</li>
+<li>Student presentation</li>
 </ul>
 <p><strong>Readings:</strong></p>
 <ul>
