--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@ ul.others {
     <div id="others" class="section">
       <h2>Media</h2>
       <ul class="others">
+        <li><a href="https://www.fuqua.duke.edu/duke-fuqua-insights/smarter-inventory-decisions-with-data" target="_blank" rel="noopener noreferrer">Making Smarter Inventory Decisions with Data</a></li>
         <li><a href="https://www.fuqua.duke.edu/duke-fuqua-insights/shang-working-capital?campaign=000000&utm_campaign=ALL_19058-1&utm_source=IntDukeFuqua&utm_medium=Email&utm_content=DukeFuquaInsights" target="_blank" rel="noopener noreferrer">Connecting Operations and Finance Makes Firms More Efficient</a></li>
         <li><a href="https://www.scmr.com/article/using-machine-learning-to-smartly-stock-grocery-stores" target="_blank" rel="noopener noreferrer">Using Machine Learning to Smartly Stock Grocery Stores</a></li>
         <li><a href="https://www.fuqua.duke.edu/duke-fuqua-insights/better-business-model-electric-vehicle-charging-stations" target="_blank" rel="noopener noreferrer">A Better Business Model for Electric Vehicle Charging Stations</a></li>
