--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@ ul.others {
         <li> Lin, C.-A. K. Shang, and P. Sun. 2024. Dynamic pricing and release time control for service systems. <i>Working paper</i>.</li>
         <li> Lin, C.-A., K. Shang, P. Sun. 2024. Wait-time based control of single-server queues. <i>Working paper</i>.</li>
         <li> Huang, J., K. Shang, Y. Yang, W. Zhou. 2024. Data-driven optimal and myopic policies for inventory systems with demand covariates. <i>Working paper</i>.</li>
-        <li> Kao, Y.-M., B. Keskin, K. Shang. 2022. Bayesian dynamic pricing and subscription period selection with unknown customer utility. <i>Working paper</i>.</li>
+        <li> Kao, Y.-M., B. Keskin, K. Shang. 2025. Bayesian dynamic pricing and subscription period selection with unknown customer utility. Minor revision in <i>Management Science</i>.</li>
+        <li> Huang, J.-K., K. Shang, Y. Yang, W. Zhou, D. Li. 2025. Taylor approximation of inventory policies for one-warehouse multi-retailer systems with demand feature information. <i>Management Science</i> 71(1) 879-897.</li>
         <li> Shang, K., J.-S. Song, S. Zhou. 2023. Single-stage approximations of multiechelon inventory models. Chapter 8 in <i>Research Handbook on Inventory Management</i>. Edward Elgar Publishing Ltd.</li>
         <li> Shang, K., J.-S. Song. 2023. Inventory models with financial flows. Chapter 12 in <i>Research Handbook on Inventory Management</i>. Edward Elgar Publishing Ltd.</li>
-        <li> Huang, J.-K., K. Shang, Y. Yang, W. Zhou, D. Li. 2024. Taylor approximation of inventory policies for one-warehouse multi-retailer systems with demand feature information. Forthcoming in <i>Management Science</i>.</li>
         <li> Lin, C.-A., K. Shang, P. Sun. 2023. Wait time based pricing for queues with customer-chosen service times. <i>Management Science</i> 69(4) 2127-2146.</li>
         <li> Kao, Y.-M., B. Keskin, K. Shang. 2022. Impact of information asymmetry and capacity constraints on business interruption insurance. <i>Management Science</i> 68(4) 2824-2841.</li>
         <li> Kok, G., K. Shang, S. Yucel. 2020. Capacity investments in renewable and conventional energy sources: The role of operational flexibility. <i>Manufacturing & Service Operations Management</i> 22(5) 925-941.</li>
